# data-structure-visualization

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
crates/visualizer-catalog/: Cargo.toml
crates/visualizer-catalog/src/: lib.rs  types.rs
crates/visualizer-catalog/src/catalog/: dp.rs  graph.rs  linear.rs  mod.rs  recursion.rs  searching.rs  sorting.rs  stack_queue.rs  tree.rs
crates/visualizer-cli/: Cargo.toml
crates/visualizer-cli/src/: main.rs
crates/visualizer-core/: Cargo.toml
crates/visualizer-core/src/: lib.rs  types.rs
crates/visualizer-core/src/dp/: fibonacci_dp.rs  knapsack.rs  lcs.rs  lis.rs  mod.rs
crates/visualizer-core/src/graph/: bfs.rs  dfs.rs  dijkstra.rs  kruskal.rs  mod.rs  prim.rs  topological_sort.rs
crates/visualizer-core/src/linear/: array_delete.rs  array_insert.rs  linked_list_traverse.rs  mod.rs
crates/visualizer-core/src/recursive/: factorial.rs  fibonacci.rs  mod.rs  tower_of_hanoi.rs
crates/visualizer-core/src/searching/: binary_search.rs  hash_search.rs  interpolation_search.rs  linear_search.rs  mod.rs
crates/visualizer-core/src/sorting/: bubble_sort.rs  mod.rs  (+9 more)
crates/visualizer-wasm/: Cargo.toml
crates/visualizer-wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  main.tsx  types.ts
web/src/data/: algorithmMeta.ts  codeSamples.ts  roadmap.ts
web/src/hooks/: useWasm.ts
web/src/routes/: AboutPage.tsx  AlgorithmsPage.tsx  DataStructuresPage.tsx  HomePage.tsx  RoadmapPage.tsx  VisualizerPage.tsx
web/src/styles/: globals.css
(+26 files in other folders)
