[package]
name = "visualizer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
visualizer-core = { path = "../visualizer-core" }
visualizer-catalog = { path = "../visualizer-catalog" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]
